--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,8 @@
 @import 'tw-animate-css';
 
 @theme {
+  --font-sans: 'Pretendard', sans-serif;
+
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -39,27 +41,27 @@
   --color-sidebar-ring: var(--sidebar-ring);
 
   /* 컬러 변수 */
-  --primary-blue: #4338ca;
-  --primary-purple: #9333ea;
-  --primary-pink: #db2777;
-  --primary-orange: #f17d16;
-  --primary-yellow: #ffaa00;
+  --color-primary-blue: #4338ca;
+  --color-primary-purple: #9333ea;
+  --color-primary-pink: #db2777;
+  --color-primary-orange: #f17d16;
+  --color-primary-yellow: #ffaa00;
 
-  --secondary-blue-100: #f2f4fe;
-  --secondary-blue-300: #a5b4fc;
-  --secondary-blue-500: #6366f1;
-  --secondary-orange-100: #f1e5d9;
-  --secondary-orange-300: #f1c49d;
-  --secondary-orange-500: #f1994b;
-  --secondary-purple-100: #f8f2ff;
-  --secondary-purple-300: #d8b4fe;
-  --secondary-purple-500: #a855f7;
-  --secondary-yellow-100: #fff7e5;
-  --secondary-yellow-300: #f2d69d;
-  --secondary-yellow-500: #f2bb4b;
-  --secondary-pink-100: #fff2fa;
-  --secondary-pink-300: #f9a8d4;
-  --secondary-pink-500: #ec4899;
+  --color-primary-blue-100: #f2f4fe;
+  --color-primary-blue-300: #a5b4fc;
+  --color-primary-blue-500: #6366f1;
+  --color-primary-orange-100: #f1e5d9;
+  --color-primary-orange-300: #f1c49d;
+  --color-primary-orange-500: #f1994b;
+  --color-primary-purple-100: #f8f2ff;
+  --color-primary-purple-300: #d8b4fe;
+  --color-primary-purple-500: #a855f7;
+  --color-primary-yellow-100: #fff7e5;
+  --color-primary-yellow-300: #f2d69d;
+  --color-primary-yellow-500: #f2bb4b;
+  --color-primary-pink-100: #fff2fa;
+  --color-primary-pink-300: #f9a8d4;
+  --color-primary-pink-500: #ec4899;
 
   --color-gray-50: #ffffff;
   --color-gray-100: #fafafa;
@@ -69,26 +71,170 @@
   --color-gray-500: #9b9b9b;
   --color-gray-600: #797979;
   --color-gray-700: #4b4b4b;
-  --color-gray-800: ;
+  --color-gray-800: #262626;
   --color-gray-900: #0f0f0f;
   --color-gray-950: #000000;
 
-  /* 기본 테마 변수 */
-  --font-sans: 'Pretendard', sans-serif;
   --color-white: var(--color-gray-50);
   --color-black: var(--color-gary-950);
+  --color-disable: #e0e0e0;
+
+  --negative-base: #d81d00;
+  --negative-light: #ff2200;
+  --negative-dark: #a71d08;
 
   --primary: var(--primary-blue);
   --primary-foreground: var(--color-white);
   --secondary: var(--primary-purple);
   --secondary-foreground: var(--color-white);
 
-  /* 텍스트 사이즈 변수 */
-  --text-base: 14px;
+  --muted: oklch(0.97 0 0);
+  --muted-foreground: oklch(0.556 0 0);
+  --accent: oklch(0.97 0 0);
+  --accent-foreground: oklch(0.205 0 0);
+  --destructive: var(--negative-base);
+  --border: var(--color-gray-400);
+  --input: var(--color-gray-400);
+  --ring: oklch(0.708 0 0);
+
+  /* 사이즈 변수 */
   --radius: 0.625rem;
+  --radius-xs: 0.125rem;
+  --radius-sm: 0.25rem;
+  --radius-md: 0.375rem;
+  --radius-lg: 0.5rem;
+  --radius-xl: 0.75rem;
+  --radius-2xl: 1rem;
+  --radius-3xl: 1.5rem;
+  --radius-4xl: 2rem;
+
+  --spacing: 0.25rem;
+
+  --breakpoint-sm: 40rem; /* 640px */
+  --breakpoint-md: 48rem; /* 768px */
+  --breakpoint-lg: 64rem; /* 1024px */
+  --breakpoint-xl: 80rem; /* 1280px */
+  --breakpoint-2xl: 96rem; /* 1536px */
+
+  --container-3xs: 16rem; /* 256px */
+  --container-2xs: 18rem; /* 288px */
+  --container-xs: 20rem; /* 320px */
+  --container-sm: 24rem; /* 384px */
+  --container-md: 28rem; /* 448px */
+  --container-lg: 32rem; /* 512px */
+  --container-xl: 36rem; /* 576px */
+  --container-2xl: 42rem; /* 672px */
+  --container-3xl: 48rem; /* 768px */
+  --container-4xl: 56rem; /* 896px */
+  --container-5xl: 64rem; /* 1024px */
+  --container-6xl: 72rem; /* 1152px */
+  --container-7xl: 80rem; /* 1280px */
+
+  --text-xs: 0.625rem; /* 10px */
+  --text-xs--line-height: calc(1 / 0.625);
+  --text-sm: 0.75rem; /* 12px */
+  --text-sm--line-height: calc(1.25 / 0.75);
+  --text-base: 0.875rem; /* 14px */
+  --text-base--line-height: calc(1.5 / 0.875);
+  --text-lg: 1rem; /* 16px */
+  --text-lg--line-height: calc(1.75 / 1);
+  --text-xl: 1.125rem; /* 18px */
+  --text-xl--line-height: calc(1.75 / 1.125);
+  --text-2xl: 1.25rem; /* 20px */
+  --text-2xl--line-height: calc(2 / 1.25);
+  --text-3xl: 1.5rem; /* 24px */
+  --text-3xl--line-height: calc(2.25 / 1.5);
+  --text-4xl: 1.875rem; /* 30px */
+  --text-4xl--line-height: calc(2.5 / 1.875);
+  --text-5xl: 2.25rem; /* 36px */
+  --text-5xl--line-height: 1;
+  --text-6xl: 2.5rem; /* 40px */
+  --text-6xl--line-height: 1;
+  --text-7xl: 3rem; /* 48px */
+  --text-7xl--line-height: 1;
+  --text-8xl: 3.75rem; /* 60px */
+  --text-8xl--line-height: 1;
+  --text-9xl: 4.5rem; /* 72px */
+  --text-9xl--line-height: 1;
+
+  /* Shadow 선언 */
+  --shadow-blue: 0px 0px 10px 0px --alpha(var(--color-primary-blue) / 70%);
+  --shadow-gray: 0px 0px 10px 0px --alpha(var(--color-gray-400) / 70%);
+
+  --shadow-2xs: 0 1px rgb(0 0 0 / 0.05);
+  --shadow-xs: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --shadow-sm: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --shadow-xl: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+
+  --shadow-2xl: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --inset-shadow-2xs: inset 0 1px rgb(0 0 0 / 0.05);
+  --inset-shadow-xs: inset 0 1px 1px rgb(0 0 0 / 0.05);
+  --inset-shadow-sm: inset 0 2px 4px rgb(0 0 0 / 0.05);
+
+  --drop-shadow-xs: 0 1px 1px rgb(0 0 0 / 0.05);
+  --drop-shadow-sm: 0 1px 2px rgb(0 0 0 / 0.15);
+  --drop-shadow-md: 0 3px 3px rgb(0 0 0 / 0.12);
+  --drop-shadow-lg: 0 4px 4px rgb(0 0 0 / 0.15);
+  --drop-shadow-xl: 0 9px 7px rgb(0 0 0 / 0.1);
+  --drop-shadow-2xl: 0 25px 25px rgb(0 0 0 / 0.15);
+
+  --blur-xs: 4px;
+  --blur-sm: 8px;
+  --blur-md: 12px;
+  --blur-lg: 16px;
+  --blur-xl: 24px;
+  --blur-2xl: 40px;
+  --blur-3xl: 64px;
+
+  --perspective-dramatic: 100px;
+  --perspective-near: 300px;
+  --perspective-normal: 500px;
+  --perspective-midrange: 800px;
+  --perspective-distant: 1200px;
+
+  --aspect-video: 16 / 9;
+  --ease-in: cubic-bezier(0.4, 0, 1, 1);
+  --ease-out: cubic-bezier(0, 0, 0.2, 1);
+  --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
+
+  --animate-spin: spin 1s linear infinite;
+  --animate-ping: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+  --animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  --animate-bounce: bounce 1s infinite;
+
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes ping {
+    75%,
+    100% {
+      transform: scale(2);
+      opacity: 0;
+    }
+  }
+  @keyframes pulse {
+    50% {
+      opacity: 0.5;
+    }
+  }
+  @keyframes bounce {
+    0%,
+    100% {
+      transform: translateY(-25%);
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }
+    50% {
+      transform: none;
+      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    }
+  }
 }
 
-:root {
+@layer base {
   * {
     @apply border-border outline-ring/50;
   }
