--- a/client/src/index.css
+++ b/client/src/index.css
@@ -329,6 +329,12 @@
   }
 }
 
+@layer components {
+  .short-v-divider {
+    @apply relative before:absolute before:top-1/2 before:left-0 before:h-11 before:w-px before:-translate-y-1/2 before:bg-gray-300 before:content-[''] first:before:hidden;
+  }
+}
+
 .modal {
   color: var(--primary);
   background: var(--color-gray-50);
