feat: 대시보드 페이지 작업 & Avatar 컴포넌트 추가
1. 대시보드 페이지 작업
2. Avatar 컴포넌트 추가
3. Badge 컴포넌트 내 Dot variant 추가

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -112,7 +112,8 @@
   --popover: var(--color-white);
   --border: var(--color-gray-400);
   --input: var(--color-gray-400);
-  --ring: oklch(0.708 0 0);
+  --ring: var(--color-white);
+  --background: var(--color-white);
 
   /* 사이즈 변수 */
   --radius: 0.625rem;
