feat: date-fns parsing 형식으로 데이터 노출 방식 변경

--- a/client/src/assets/scss/calendar.scss
+++ b/client/src/assets/scss/calendar.scss
@@ -35,7 +35,11 @@
     }
 
     .rbc-today{
-      @apply bg-blue-100;
+      @apply bg-blue-50;
+    }
+    
+    .rbc-now {
+      @apply bg-blue-50;
     }
 
     // 주말 날짜 셀 스타일
