--- a/client/src/assets/scss/calendar.scss
+++ b/client/src/assets/scss/calendar.scss
@@ -50,7 +50,11 @@
 
     // 주말 날짜 셀 스타일
     .rbc-weekend {
-      @apply bg-gray-100 text-gray-500;
+      @apply bg-gray-100 text-blue-500;
+    }
+    // 휴일 날짜 셀 스타일
+    .rbc-holiday {
+      @apply bg-gray-100 text-red-500;
     }
 
   }
@@ -110,9 +114,20 @@
 }
 
 
-// 공휴일 
+// 공휴일 표시 관련
+.day-weekend {
+  @apply text-blue-500;
+}
+.day-holiday {
+  @apply text-red-500;
+}
 .holiday-title {
   @apply text-red-500;
+}
+.rbc-off-range {
+  .day-number, .holiday-title {
+    @apply text-gray-500;
+  }
 }
 
 // 자체 모달
