feat: 캘린더 툴바 뷰 변경

--- a/client/src/assets/scss/calendar.scss
+++ b/client/src/assets/scss/calendar.scss
@@ -44,7 +44,7 @@
     .rbc-today{
       // @apply bg-[var(--color-primary-blue-50)];
       @apply border border-[var(--color-primary-blue-300)];
-      background-color: #f7f9fc;
+      background-color: #fafcff;
     }
     
     .rbc-now {
