feat: 에러 페이지

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,6 +82,8 @@
   --color-primary-pink-100: #fff2fa;
   --color-primary-pink-300: #f9a8d4;
   --color-primary-pink-500: #ec4899;
+  
+  --color-secondary-blue-500: #6366F1;
 
   --color-gray-50: #ffffff;
   --color-gray-100: #fafafa;
