feat: 출퇴근관리 반려됨 상태일 때 기능 추가, 팝업 z-index 수정
:wq

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,6 +63,7 @@
   --color-primary-orange: #f17d16;
   --color-primary-yellow: #ffaa00;
 
+  --color-primary-blue-50: #fafcff;
   --color-primary-blue-100: #f2f4fe;
   --color-primary-blue-150: #e0e5ff;
   --color-primary-blue-300: #a5b4fc;
