feat: 캘린더 이벤트 상태 뷰 모달 추가

--- a/client/src/assets/scss/calendar.scss
+++ b/client/src/assets/scss/calendar.scss
@@ -18,6 +18,10 @@
   @apply text-sm bg-transparent pl-1 pr-1 pt-0 pb-0; 
 }
 
+.rbc-event.rbc-selected, .rbc-day-slot .rbc-selected.rbc-background-event {
+  @apply bg-transparent
+}
+
 
 .rbc-month-view {
   // @apply bg-gray-50 border border-gray-200 rounded-lg;
