feat: 프로젝트 오버뷰 차트작업

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -355,6 +355,16 @@
     overflow: visible !important;
     margin-right: 0 !important;
   }
+
+  .centered {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+  }
 }
 
 @layer utilities {
